SetConqueredCommand: collector not needed